# linux-Assistant

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
graph/: graph.py  nodes.py
models/: config.py  model_nodes.py
src/linux_assistant/: __init__.py  __main__.py  app.py  setup.py
src/linux_assistant/graph/: config.py  graph.py  nodes.py
src/linux_assistant/models/: config.py  model_nodes.py
src/linux_assistant/utils/: console_utils.py  dicts.py  subprocess.py
utils/: dicts.py
